--- a/src/components/utility/icon/textIcon/_textIcon.scss
+++ b/src/components/utility/icon/textIcon/_textIcon.scss
@@ -1,4 +1,4 @@
-.text-icon {
+.text-icon, .text-icon-absolute {
   width: fit-content;
   background: rgba(0, 0, 0, 0.38);
   padding: 0 8px;
@@ -7,4 +7,10 @@
   .text-icon-text {
     color: white;
   }
+}
+
+.text-icon-absolute {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
