--- a/src/components/cards/driverGroupCard/_driverGroupCard.scss
+++ b/src/components/cards/driverGroupCard/_driverGroupCard.scss
@@ -67,10 +67,15 @@
 
 .driver-group-card-selected {
   background: variables.$mui-blue;
+  cursor: default;
 
   .driver-group-content {
     .driver-group-title {
       color: white;
     }
+  }
+
+  &:hover {
+    background: variables.$mui-blue;
   }
 }
